--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
       "src": "favicon192.png",
-      "sizes": "192x192",
+      "sizes": "100x100",
       "type": "image/png"
     }
   ],
