--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "use-debounce": "^9.0.4",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
