--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "react": "^18.1.0",
+    "react-calendar": "^4.6.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.1.1",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "url": "^0.11.1",
     "use-debounce": "^9.0.4",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
