--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "formik": "^2.4.2",
     "react": "^18.1.0",
     "react-calendar": "^4.6.0",
@@ -60,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.11.0"
+    "@emotion/babel-plugin": "^11.11.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0"
   }
 }
