--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "formik": "^2.4.2",
+    "overlayscrollbars": "^2.2.1",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.6.0",
