--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "date-fns": "^2.30.0",
     "eslint-plugin-react": "^7.33.1",
     "formik": "^2.4.2",
+    "overlayscrollbars": "^2.2.1",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.6.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
