--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-calendar": "^4.6.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
