--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint-plugin-react": "^7.33.1",
     "formik": "^2.4.2",
+    "jwt-decode": "^4.0.0",
     "memoize-one": "^6.0.0",
     "overlayscrollbars": "^2.2.1",
     "react": "^18.1.0",
